fix design work title not showing up

--- a/src/components/pages/WorkPage/DesignSection.scss
+++ b/src/components/pages/WorkPage/DesignSection.scss
@@ -16,6 +16,7 @@
 
     .text-container {
       position: absolute;
+      top: 0;
       width: 100%;
       height: 100%;
       display: flex;
